# BezierSurface-ComputerGraphics-2024

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: BezierSurface.cpp.10D92D6B289EB031.idx  BezierSurface.h.CA15145643CDEDAB.idx  BezierSurfaceSettings.h.8F9F89E8D22DB296.idx  DrawData.cpp.0FC5B7746B716E56.idx  DrawData.h.C57D43C1A6948D79.idx  DrawHelper.cpp.5EE4ED33065D4304.idx  DrawUtils.h.D6C1E1F5DBF9FD99.idx  GraphicsEngineSettings.h.AAC0104233FEFF28.idx  LightSettings.h.0682E8ADA9C8647C.idx  LightSource.cpp.495EE9FCF8A583A0.idx  LightSource.h.0FE1FFE1D8FB7337.idx  MainWindow.cpp.31704D22A6A177E4.idx  MainWindow.h.CD1DB287B3597C6D.idx  Mesh.cpp.BB80535DA0E9669A.idx  Mesh.h.3D4CBEB00E82AF49.idx  MeshSettings.h.78FA4E1C619ABF23.idx  QGraphicsEngine.cpp.D9B54D9AFA2C87D5.idx  QGraphicsEngine.h.92CA184FBB247C92.idx  QGraphicsEngineDrawable.h.A377B32B901AD853.idx  Settings.cpp.B9E0EDCB04E6DA5A.idx  Settings.h.C93AEBEEB71E2063.idx  Triangle.cpp.F9CB44BFA478209C.idx  Triangle.h.B3DCE74355741278.idx  TriangleSettings.h.EE8D1ABC89369BEE.idx  VectorMovementUtils.cpp.F2D10B244C24E725.idx  VectorMovementUtils.h.4F9CB1A190CDB553.idx  Vertex.cpp.8EEB25697D597C7C.idx  Vertex.h.87FE6764C99A468E.idx  VertexSettings.h.003698EC14D2072B.idx  main.cpp.9402921B964C3EA8.idx
assets/: controlPoints.txt
assets/bezierSurfaces/: basic.txt  crazy.txt  kuba.txt  wavy.txt
include/: BezierSurface.h  MainWindow.h  QGraphicsEngine.h
include/geometry/: BezierSurface.h  Mesh.h  Triangle.h  Vertex.h
include/graphics/: LightSource.h  QGraphicsEngine.h  QGraphicsEngineDrawable.h
include/models/: DrawData.h
include/settings/: BezierSurfaceSettings.h  GraphicsEngineSettings.h  LightSettings.h  MeshSettings.h  Settings.h  TriangleSettings.h  VertexSettings.h
include/ui/: MainWindow.h
include/utils/: DrawHelper.h  DrawUtils.h  MeshSettings.h  Settings.h  TriangleSettings.h  VectorMovementUtils.h  VertexSettings.h
src/: BezierSurface.cpp  DrawData.cpp  DrawHelper.cpp  LightSource.cpp  MainWindow.cpp  Mesh.cpp  QGraphicsEngine.cpp  Settings.cpp  Triangle.cpp  VectorMovementUtils.cpp  Vertex.cpp  main.cpp
